--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/node": "20.5.6",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@types/react-dom": "18.2.7",
-    "prettier": "^3.0.3"
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3"
   }
 }
