KAADO-34: - Create view card type page - Add info and danger color to theme - edit docker compose to run app outside docker

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://monuser:monpassword@mongo:27017/test?authSource=admin
+MONGODB_URI=mongodb://monuser:monpassword@0.0.0.0:27017/test?authSource=admin
