KAADO-29: - Create user service - Add bcrypt to package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "mongoose": "^7.4.5",
     "next": "13.4.19",
     "react": "18.2.0",
