KAADO-23: - Create user auth service - Create a simple login page - Create a simple sign up page - Update user schema

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb://monuser:monpassword@0.0.0.0:27017/test?authSource=admin
+NEXTAUTH_SECRET=np2eKckZAIMQoQSzDsuTf2HhXfY4YScgORF5VJT/3BY=
