KAADO-57: Update docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
         environment:
             - NODE_ENV=development
             - CHOKIDAR_USEPOLLING=true
+            - MONGODB_URI=mongodb://monuser:monpassword@mongo:27017/test?authSource=admin
+            - NEXTAUTH_SECRET=np2eKckZAIMQoQSzDsuTf2HhXfY4YScgORF5VJT/3BY=
         volumes:
             - .:/app
             - node_modules:/app/node_modules
-        command: sh -c "npm run dev"
         depends_on:
           - mongo
 
